--- a/pyburger/templates/burger_search.html
+++ b/pyburger/templates/burger_search.html
@@ -6,6 +6,15 @@
 </head>
 <body>
     <h1>파이버거 검색 화면입니다.</h1>
-    <div>{{ burgers }}</div>
+    <h2>검색결과</h2>
+{#    <div>{{ burgers }}</div>#}
+ {% for item in burgers %}
+        <div>
+            id : {{ item.id }}
+            이름: {{ item.name }}
+            가격 : {{item.price  }}원
+            칼로리 : {{ item.calories }} kcal
+        </div>
+    {% endfor %}
 </body>
 </html>
