--- a/pylog/templates/post_list.html
+++ b/pylog/templates/post_list.html
@@ -1,10 +1,31 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>post_list</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+<div id="navbar">
     <h1>post_list 화면입니다.</h1>
+</div>
+<div id="post-list">
+    <ul  class="posts">
+        {% for post in posts %}
+            <li class="post">
+                <h2>{{ post.title }}</h2>
+                <p>{{ post.content }}</p>
+                <ul class="comments">
+                    {% for comment in post.comment_set.all %}
+                        <li class="comment">{{ comment.content }}</li>
+                    {% empty %}
+                        <li class="comment-empty">아직 댓글이 없음</li>
+                    {% endfor %}
+                </ul>
+            </li>
+        {% endfor %}
+    </ul>
+</div>
 </body>
 </html>
