--- a/pylog/templates/post_list.html
+++ b/pylog/templates/post_list.html
@@ -11,7 +11,7 @@
     <h1>post_list 화면입니다.</h1>
 </div>
 <div id="post-list">
-    <ul  class="posts">
+    <ul class="posts">
         {% for post in posts %}
             <li class="post">
                 <h2>{{ post.title }}</h2>
@@ -23,6 +23,12 @@
                         <li class="comment-empty">아직 댓글이 없음</li>
                     {% endfor %}
                 </ul>
+                {#            첨부 이미지 확인#}
+                {% if post.thumbnail %}
+                    <img src="{{ post.thumbnail.url }}" alt="">
+                {% else %}
+                    <img src="" alt="">
+                {% endif %}
             </li>
         {% endfor %}
     </ul>
