--- a/pylog/templates/post_detail.html
+++ b/pylog/templates/post_detail.html
@@ -14,7 +14,14 @@
     <span>{{ post.title }}</span>
 </div>
 <div id="post-detail">
-    <p>{{ post.content }}</p>
+      <p>{{post.content | linebreaksbr}}</p>
+        <ul class="comments">
+            {% for comment in post.comment_set.all %}
+                <li class="comment">{{comment.content}}</li>
+            {% empty %}
+                <li class="comment-empty">아직 댓글이 없음</li>
+            {% endfor %}
+        </ul>
 </div>
 </body>
 </html>
