--- a/pylog/templates/post_add.html
+++ b/pylog/templates/post_add.html
@@ -8,17 +8,19 @@
 </head>
 <body>
 <h1>글 작성 임시 화면입니다.</h1>
- <form method="post">
+<div id="post-add">
+        <form method="post">
             {% csrf_token %}
-    <div>
-        <label>제목</label>
-        <input name="title" type="text">
+            <div>
+                <label>제목</label>
+                <input name="title" type="text">
+            </div>
+            <div>
+                <label>내용</label>
+                <textarea name="content" cols="50" rows="10"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">작성</button>
+        </form>
     </div>
-    <div>
-        <label>내용</label>
-        <textarea name="content" cols="50" rows="10"></textarea>
-    </div>
-    <button type="submit">작성</button>
-</form>
 </body>
 </html>
