--- a/pylog/templates/post_list.html
+++ b/pylog/templates/post_list.html
@@ -9,6 +9,7 @@
 <body>
 <div id="navbar">
     <h1>post_list 화면입니다.</h1>
+    <a href="/posts/add/" class="btn btn-primary">글 작성</a>
 </div>
 <div id="post-list">
     <ul class="posts">
