6교시, 댓글 작성 작업 2

--- a/pylog/templates/post_add.html
+++ b/pylog/templates/post_add.html
@@ -9,7 +9,7 @@
 <body>
 <h1>글 작성 임시 화면입니다.</h1>
 <div id="post-add">
-        <form method="post">
+         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div>
                 <label>제목</label>
@@ -18,6 +18,10 @@
             <div>
                 <label>내용</label>
                 <textarea name="content" cols="50" rows="10"></textarea>
+            </div>
+             <div>
+                <label>썸네일</label>
+                <input name="thumbnail" type="file">
             </div>
             <button type="submit" class="btn btn-primary">작성</button>
         </form>
